Fix alignment between boxes in matches

--- a/src/components/Match/styles.module.scss
+++ b/src/components/Match/styles.module.scss
@@ -31,6 +31,8 @@
 .column {
   display: flex;
   width: 200px;
+  height: 150px;
+  align-items: flex-start;
 }
 
 .bordered {
